JSBachParser.py
# Generated from JSBach.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JSBachParser ( Parser ):

    grammarFileName = "JSBach.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'|:'", "':|'", "'{'", "'}'", 
                     "'('", "')'", "'['", "']'", "'<-'", "'<!>'", "'<?>'", 
                     "'<:>'", "'while'", "'if'", "'else'", "'<<'", "'8<'", 
                     "<INVALID>", "'^'", "'*'", "'/'", "'+'", "'-'", "'%'", 
                     "<INVALID>", "'#'" ]

    symbolicNames = [ "<INVALID>", "LINE_COMMENT", "OPENKEY", "CLOSEKEY", 
                      "OPENLIST", "CLOSELIST", "OPENPARENTHESIS", "CLOSEPARENTHESIS", 
                      "OPENBRACKET", "CLOSEBRACKET", "ASSIG", "WRITE", "READ", 
                      "REPR", "WHILE", "IF", "ELSE", "APPEND", "CUT", "NUM", 
                      "POWER", "STAR", "DIV", "PLUS", "MINUS", "MOD", "RELATION", 
                      "LEN", "BASE_NOTE", "NOTE_OCTAVE", "VAR_ID", "PROC_ID", 
                      "STRING", "LETTER", "DIGIT", "WS" ]

    RULE_root = 0
    RULE_procediment = 1
    RULE_instruction = 2
    RULE_expr = 3
    RULE_condition = 4
    RULE_note = 5

    ruleNames =  [ "root", "procediment", "instruction", "expr", "condition", 
                   "note" ]

    EOF = Token.EOF
    LINE_COMMENT=1
    OPENKEY=2
    CLOSEKEY=3
    OPENLIST=4
    CLOSELIST=5
    OPENPARENTHESIS=6
    CLOSEPARENTHESIS=7
    OPENBRACKET=8
    CLOSEBRACKET=9
    ASSIG=10
    WRITE=11
    READ=12
    REPR=13
    WHILE=14
    IF=15
    ELSE=16
    APPEND=17
    CUT=18
    NUM=19
    POWER=20
    STAR=21
    DIV=22
    PLUS=23
    MINUS=24
    MOD=25
    RELATION=26
    LEN=27
    BASE_NOTE=28
    NOTE_OCTAVE=29
    VAR_ID=30
    PROC_ID=31
    STRING=32
    LETTER=33
    DIGIT=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JSBachParser.EOF, 0)

        def procediment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ProcedimentContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ProcedimentContext,i)


        def getRuleIndex(self):
            return JSBachParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = JSBachParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.procediment()
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JSBachParser.PROC_ID):
                    break

            self.state = 17
            self.match(JSBachParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedimentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROC_ID(self):
            return self.getToken(JSBachParser.PROC_ID, 0)

        def OPENKEY(self):
            return self.getToken(JSBachParser.OPENKEY, 0)

        def CLOSEKEY(self):
            return self.getToken(JSBachParser.CLOSEKEY, 0)

        def VAR_ID(self, i:int=None):
            if i is None:
                return self.getTokens(JSBachParser.VAR_ID)
            else:
                return self.getToken(JSBachParser.VAR_ID, i)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.InstructionContext)
            else:
                return self.getTypedRuleContext(JSBachParser.InstructionContext,i)


        def getRuleIndex(self):
            return JSBachParser.RULE_procediment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcediment" ):
                return visitor.visitProcediment(self)
            else:
                return visitor.visitChildren(self)




    def procediment(self):

        localctx = JSBachParser.ProcedimentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procediment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(JSBachParser.PROC_ID)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JSBachParser.VAR_ID:
                self.state = 20
                self.match(JSBachParser.VAR_ID)
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(JSBachParser.OPENKEY)
            self.state = 28 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 27
                self.instruction()
                self.state = 30 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSBachParser.WRITE) | (1 << JSBachParser.READ) | (1 << JSBachParser.REPR) | (1 << JSBachParser.WHILE) | (1 << JSBachParser.IF) | (1 << JSBachParser.CUT) | (1 << JSBachParser.VAR_ID) | (1 << JSBachParser.PROC_ID))) != 0)):
                    break

            self.state = 32
            self.match(JSBachParser.CLOSEKEY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JSBachParser.RULE_instruction

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReprContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REPR(self):
            return self.getToken(JSBachParser.REPR, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepr" ):
                return visitor.visitRepr(self)
            else:
                return visitor.visitChildren(self)


    class FuncallContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PROC_ID(self):
            return self.getToken(JSBachParser.PROC_ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncall" ):
                return visitor.visitFuncall(self)
            else:
                return visitor.visitChildren(self)


    class AssigContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR_ID(self):
            return self.getToken(JSBachParser.VAR_ID, 0)
        def ASSIG(self):
            return self.getToken(JSBachParser.ASSIG, 0)
        def expr(self):
            return self.getTypedRuleContext(JSBachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssig" ):
                return visitor.visitAssig(self)
            else:
                return visitor.visitChildren(self)


    class ReadContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(JSBachParser.READ, 0)
        def VAR_ID(self):
            return self.getToken(JSBachParser.VAR_ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class CutContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CUT(self):
            return self.getToken(JSBachParser.CUT, 0)
        def VAR_ID(self):
            return self.getToken(JSBachParser.VAR_ID, 0)
        def OPENBRACKET(self):
            return self.getToken(JSBachParser.OPENBRACKET, 0)
        def expr(self):
            return self.getTypedRuleContext(JSBachParser.ExprContext,0)

        def CLOSEBRACKET(self):
            return self.getToken(JSBachParser.CLOSEBRACKET, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCut" ):
                return visitor.visitCut(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(JSBachParser.WHILE, 0)
        def condition(self):
            return self.getTypedRuleContext(JSBachParser.ConditionContext,0)

        def OPENKEY(self):
            return self.getToken(JSBachParser.OPENKEY, 0)
        def CLOSEKEY(self):
            return self.getToken(JSBachParser.CLOSEKEY, 0)
        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.InstructionContext)
            else:
                return self.getTypedRuleContext(JSBachParser.InstructionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class WriteContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(JSBachParser.WRITE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)


    class AppendContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR_ID(self):
            return self.getToken(JSBachParser.VAR_ID, 0)
        def APPEND(self):
            return self.getToken(JSBachParser.APPEND, 0)
        def expr(self):
            return self.getTypedRuleContext(JSBachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAppend" ):
                return visitor.visitAppend(self)
            else:
                return visitor.visitChildren(self)


    class IfelseContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(JSBachParser.IF, 0)
        def condition(self):
            return self.getTypedRuleContext(JSBachParser.ConditionContext,0)

        def OPENKEY(self, i:int=None):
            if i is None:
                return self.getTokens(JSBachParser.OPENKEY)
            else:
                return self.getToken(JSBachParser.OPENKEY, i)
        def CLOSEKEY(self, i:int=None):
            if i is None:
                return self.getTokens(JSBachParser.CLOSEKEY)
            else:
                return self.getToken(JSBachParser.CLOSEKEY, i)
        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.InstructionContext)
            else:
                return self.getTypedRuleContext(JSBachParser.InstructionContext,i)

        def ELSE(self):
            return self.getToken(JSBachParser.ELSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfelse" ):
                return visitor.visitIfelse(self)
            else:
                return visitor.visitChildren(self)



    def instruction(self):

        localctx = JSBachParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = JSBachParser.AssigContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(JSBachParser.VAR_ID)
                self.state = 35
                self.match(JSBachParser.ASSIG)
                self.state = 36
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = JSBachParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.match(JSBachParser.WRITE)
                self.state = 39 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 38
                        self.expr(0)

                    else:
                        raise NoViableAltException(self)
                    self.state = 41 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass

            elif la_ == 3:
                localctx = JSBachParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 43
                self.match(JSBachParser.READ)
                self.state = 44
                self.match(JSBachParser.VAR_ID)
                pass

            elif la_ == 4:
                localctx = JSBachParser.ReprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.match(JSBachParser.REPR)
                self.state = 46
                self.expr(0)
                self.state = 48
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 47
                    self.expr(0)


                pass

            elif la_ == 5:
                localctx = JSBachParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.match(JSBachParser.WHILE)
                self.state = 51
                self.condition()
                self.state = 52
                self.match(JSBachParser.OPENKEY)
                self.state = 54 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 53
                    self.instruction()
                    self.state = 56 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSBachParser.WRITE) | (1 << JSBachParser.READ) | (1 << JSBachParser.REPR) | (1 << JSBachParser.WHILE) | (1 << JSBachParser.IF) | (1 << JSBachParser.CUT) | (1 << JSBachParser.VAR_ID) | (1 << JSBachParser.PROC_ID))) != 0)):
                        break

                self.state = 58
                self.match(JSBachParser.CLOSEKEY)
                pass

            elif la_ == 6:
                localctx = JSBachParser.IfelseContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.match(JSBachParser.IF)
                self.state = 61
                self.condition()
                self.state = 62
                self.match(JSBachParser.OPENKEY)
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 63
                    self.instruction()
                    self.state = 66 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSBachParser.WRITE) | (1 << JSBachParser.READ) | (1 << JSBachParser.REPR) | (1 << JSBachParser.WHILE) | (1 << JSBachParser.IF) | (1 << JSBachParser.CUT) | (1 << JSBachParser.VAR_ID) | (1 << JSBachParser.PROC_ID))) != 0)):
                        break

                self.state = 68
                self.match(JSBachParser.CLOSEKEY)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSBachParser.ELSE:
                    self.state = 69
                    self.match(JSBachParser.ELSE)
                    self.state = 70
                    self.match(JSBachParser.OPENKEY)
                    self.state = 72 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 71
                        self.instruction()
                        self.state = 74 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSBachParser.WRITE) | (1 << JSBachParser.READ) | (1 << JSBachParser.REPR) | (1 << JSBachParser.WHILE) | (1 << JSBachParser.IF) | (1 << JSBachParser.CUT) | (1 << JSBachParser.VAR_ID) | (1 << JSBachParser.PROC_ID))) != 0)):
                            break

                    self.state = 76
                    self.match(JSBachParser.CLOSEKEY)


                pass

            elif la_ == 7:
                localctx = JSBachParser.FuncallContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 80
                self.match(JSBachParser.PROC_ID)
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 81
                        self.expr(0) 
                    self.state = 86
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass

            elif la_ == 8:
                localctx = JSBachParser.AppendContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 87
                self.match(JSBachParser.VAR_ID)
                self.state = 88
                self.match(JSBachParser.APPEND)
                self.state = 89
                self.expr(0)
                pass

            elif la_ == 9:
                localctx = JSBachParser.CutContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 90
                self.match(JSBachParser.CUT)
                self.state = 91
                self.match(JSBachParser.VAR_ID)
                self.state = 92
                self.match(JSBachParser.OPENBRACKET)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(JSBachParser.CLOSEBRACKET)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JSBachParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotexprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def note(self):
            return self.getTypedRuleContext(JSBachParser.NoteContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotexpr" ):
                return visitor.visitNotexpr(self)
            else:
                return visitor.visitChildren(self)


    class OpContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ExprContext,i)

        def POWER(self):
            return self.getToken(JSBachParser.POWER, 0)
        def STAR(self):
            return self.getToken(JSBachParser.STAR, 0)
        def DIV(self):
            return self.getToken(JSBachParser.DIV, 0)
        def MOD(self):
            return self.getToken(JSBachParser.MOD, 0)
        def PLUS(self):
            return self.getToken(JSBachParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(JSBachParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(JSBachParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class NumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(JSBachParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNum" ):
                return visitor.visitNum(self)
            else:
                return visitor.visitChildren(self)


    class IndexlistContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ExprContext,i)

        def OPENBRACKET(self):
            return self.getToken(JSBachParser.OPENBRACKET, 0)
        def CLOSEBRACKET(self):
            return self.getToken(JSBachParser.CLOSEBRACKET, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexlist" ):
                return visitor.visitIndexlist(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR_ID(self):
            return self.getToken(JSBachParser.VAR_ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class ListContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPENLIST(self):
            return self.getToken(JSBachParser.OPENLIST, 0)
        def CLOSELIST(self):
            return self.getToken(JSBachParser.CLOSELIST, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPENPARENTHESIS(self):
            return self.getToken(JSBachParser.OPENPARENTHESIS, 0)
        def expr(self):
            return self.getTypedRuleContext(JSBachParser.ExprContext,0)

        def CLOSEPARENTHESIS(self):
            return self.getToken(JSBachParser.CLOSEPARENTHESIS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesis" ):
                return visitor.visitParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class ListlenContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEN(self):
            return self.getToken(JSBachParser.LEN, 0)
        def expr(self):
            return self.getTypedRuleContext(JSBachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListlen" ):
                return visitor.visitListlen(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JSBachParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JSBachParser.OPENPARENTHESIS]:
                localctx = JSBachParser.ParenthesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 99
                self.match(JSBachParser.OPENPARENTHESIS)
                self.state = 100
                self.expr(0)
                self.state = 101
                self.match(JSBachParser.CLOSEPARENTHESIS)
                pass
            elif token in [JSBachParser.NUM]:
                localctx = JSBachParser.NumContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 103
                self.match(JSBachParser.NUM)
                pass
            elif token in [JSBachParser.BASE_NOTE, JSBachParser.NOTE_OCTAVE]:
                localctx = JSBachParser.NotexprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 104
                self.note()
                pass
            elif token in [JSBachParser.STRING]:
                localctx = JSBachParser.StringContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 105
                self.match(JSBachParser.STRING)
                pass
            elif token in [JSBachParser.OPENLIST]:
                localctx = JSBachParser.ListContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 106
                self.match(JSBachParser.OPENLIST)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSBachParser.OPENLIST) | (1 << JSBachParser.OPENPARENTHESIS) | (1 << JSBachParser.NUM) | (1 << JSBachParser.LEN) | (1 << JSBachParser.BASE_NOTE) | (1 << JSBachParser.NOTE_OCTAVE) | (1 << JSBachParser.VAR_ID) | (1 << JSBachParser.STRING))) != 0):
                    self.state = 107
                    self.expr(0)
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                self.match(JSBachParser.CLOSELIST)
                pass
            elif token in [JSBachParser.VAR_ID]:
                localctx = JSBachParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 114
                self.match(JSBachParser.VAR_ID)
                pass
            elif token in [JSBachParser.LEN]:
                localctx = JSBachParser.ListlenContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 115
                self.match(JSBachParser.LEN)
                self.state = 116
                self.expr(2)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 135
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 133
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = JSBachParser.OpContext(self, JSBachParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 119
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 120
                        self.match(JSBachParser.POWER)
                        self.state = 121
                        self.expr(10)
                        pass

                    elif la_ == 2:
                        localctx = JSBachParser.OpContext(self, JSBachParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 122
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 123
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSBachParser.STAR) | (1 << JSBachParser.DIV) | (1 << JSBachParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 124
                        self.expr(10)
                        pass
